--- a/app/src/main/res/layout/activity_nfcdev.xml
+++ b/app/src/main/res/layout/activity_nfcdev.xml
@@ -11,15 +11,15 @@
         android:layout_height="45dp"
         android:background="@color/login_btn"
         >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+
+        <ImageButton
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:id="@+id/trace_search"
-            android:text="更多"
             android:gravity="center"
-            android:textColor="#ffffff"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"/>
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/more"/>
         <TextView
             android:id="@+id/title_tv"
             android:layout_width="wrap_content"
