--- a/app/src/main/res/layout/wiredsmoke_history_adapter.xml
+++ b/app/src/main/res/layout/wiredsmoke_history_adapter.xml
@@ -6,14 +6,14 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="25dp"
         android:background="#e6e6e6">
         <TextView
             android:id="@+id/alarm_time_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#666666"
-            android:textSize="16sp"
+            android:textSize="12sp"
             android:layout_marginLeft="10dp"
             android:layout_centerVertical="true"
             android:text="2016-08-04 17:29:56"/>
@@ -49,6 +49,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="16sp"
+                        android:textColor="#6f6f6f"
                         android:text="报警原因:"/>
                     <TextView
                         android:id="@+id/state_tv"
@@ -56,6 +57,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="16sp"
+                        android:textColor="#000"
                         android:text="HJKDSA545FD"/>
                 </RelativeLayout>
 
@@ -69,6 +71,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
+                    android:textColor="#6f6f6f"
                     android:text="详情:"/>
                 <TextView
                     android:id="@+id/info_tv"
@@ -76,6 +79,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
+                    android:textColor="#000"
                     android:text="HJKDSA545FD"/>
             </RelativeLayout>
                 <RelativeLayout
@@ -90,6 +94,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="16sp"
+                        android:textColor="#6f6f6f"
                         android:text="巡检人:"/>
                     <TextView
                         android:id="@+id/userid_tv"
@@ -97,6 +102,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="16sp"
+                        android:textColor="#000"
                         android:text="HJKDSA545FD"/>
                 </RelativeLayout>
             </LinearLayout>
