--- a/app/src/main/res/layout/collect_fragment_adapter.xml
+++ b/app/src/main/res/layout/collect_fragment_adapter.xml
@@ -17,6 +17,14 @@
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="5dp"
             android:text="2016-08-04 17:29:56"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/makesure_text"
+            android:layout_margin="10dp"
+            android:text="上报"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"/>
     </RelativeLayout>
 
     <RelativeLayout
