--- a/app/src/main/res/layout/chuangan_activity_adapter_item.xml
+++ b/app/src/main/res/layout/chuangan_activity_adapter_item.xml
@@ -1,58 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#ffffff"
+    android:layout_width="match_parent" android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <include layout="@layout/title_bar"/>
     <LinearLayout
+        android:id="@+id/electric_lin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="8dp"
+        android:visibility="gone"
         android:orientation="horizontal">
         <TextView
+            android:id="@+id/electric_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center_horizontal"
-            android:text="编号"/>
+            />
         <TextView
+            android:id="@+id/electric_alarm_value"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:gravity="center_horizontal"
-            android:text="上传时间"/>
+            />
         <TextView
+            android:id="@+id/electric_current_value"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center_horizontal"
-            android:text="当前数值"/>
+            />
         <TextView
+            android:id="@+id/electric_states"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center_horizontal"
-            android:text="状态"/>
+            />
     </LinearLayout>
-    <RelativeLayout
+    <TextView
+        android:id="@+id/tv_image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/swipe_fresh_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbars="vertical"
-            >
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycler_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                ></android.support.v7.widget.RecyclerView>
-        </android.support.v4.widget.SwipeRefreshLayout>
-        <include layout="@layout/progress_bar"/>
-    </RelativeLayout>
-
+        android:layout_height="0.5dp"
+        android:background="@color/xia_heng_xian"
+        android:visibility="gone"
+        />
 </LinearLayout>
