--- a/app/src/main/res/layout/shop_info_adapter.xml
+++ b/app/src/main/res/layout/shop_info_adapter.xml
@@ -137,6 +137,12 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:orientation="vertical">
+                <TextView
+                    android:id="@+id/rssi_value"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="RSSI:0"
+                    android:textColor="@color/text_color_blue"/>
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
