--- a/app/src/main/res/layout/activity_add_fire.xml
+++ b/app/src/main/res/layout/activity_add_fire.xml
@@ -65,7 +65,7 @@
                     android:gravity="center_vertical"
                     android:padding="6dp"
                     android:layout_toLeftOf="@+id/scan_repeater_ma"
-                    android:hint="@string/add_fire_mac"
+                    android:hint="ID"
                     android:textColor="@color/text_view_and_kuang"
                     android:textColorHint="@color/hint_color_text"
                     android:imeOptions="actionNext"
@@ -103,7 +103,7 @@
                     android:gravity="center_vertical"
                     android:padding="6dp"
                     android:layout_toLeftOf="@+id/scan_er_wei_ma"
-                    android:hint="@string/add_fire_mac"
+                    android:hint="ID"
                     android:textColor="@color/text_view_and_kuang"
                     android:textColorHint="@color/hint_color_text"
                     android:imeOptions="actionNext"
