--- a/app/src/main/res/layout/water_threshold_setting.xml
+++ b/app/src/main/res/layout/water_threshold_setting.xml
@@ -6,6 +6,7 @@
     android:id="@+id/rela">
 
     <TextView
+        android:id="@+id/title_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="水位阈值设置"
