--- a/app/src/main/res/layout/activity_line_chart.xml
+++ b/app/src/main/res/layout/activity_line_chart.xml
@@ -28,6 +28,18 @@
             android:paddingRight="10dp"
             android:textSize="16sp"
             android:visibility="gone"/>
+        <TextView
+            android:id="@+id/more"
+            android:layout_width="90dp"
+            android:layout_height="45dp"
+            android:textColor="#ffffff"
+            android:layout_centerVertical="true"
+            android:paddingLeft="10dp"
+            android:layout_alignParentRight="true"
+            android:gravity="center"
+            android:text="更多"
+            android:visibility="gone"
+            />
     </RelativeLayout>
     <TextView
         android:layout_below="@id/title_rela"
