--- a/app/src/main/res/layout/title_bar.xml
+++ b/app/src/main/res/layout/title_bar.xml
@@ -49,6 +49,19 @@
             android:layout_marginRight="10dp"
             />
 
+        <TextView
+            android:id="@+id/more"
+            android:layout_width="90dp"
+            android:layout_height="45dp"
+            android:textColor="#ffffff"
+            android:layout_centerVertical="true"
+            android:paddingLeft="10dp"
+            android:layout_alignParentRight="true"
+            android:gravity="center"
+            android:text="更多"
+            android:visibility="gone"
+            />
+
     </RelativeLayout>
     <TextView
         android:layout_below="@id/title_rela"
