--- a/app/src/main/res/layout/activity_add_fire.xml
+++ b/app/src/main/res/layout/activity_add_fire.xml
@@ -32,6 +32,7 @@
             android:text="@string/add_fire_title"
             android:textSize="20sp"
             android:textStyle="bold" />
+
     </RelativeLayout>
 
     <ScrollView
@@ -43,6 +44,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/device_type_name"
+                android:layout_margin="10dp"
+                android:visibility="gone"/>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
