--- a/app/src/main/res/layout/activity_host.xml
+++ b/app/src/main/res/layout/activity_host.xml
@@ -17,13 +17,29 @@
             android:textColor="#ffffff"
             android:layout_centerInParent="true"
             android:textSize="18sp" />
+        <ImageView
+            android:id="@+id/search_fire"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:src="@drawable/search"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"
+            />
     </RelativeLayout>
+
+    <include
+        android:id="@+id/search_include"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_below="@id/title_rela"
+        layout="@layout/include_search"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#e6e6e6"
-        android:layout_below="@id/title_rela">
+        android:layout_below="@id/search_include">
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/swipere_fresh_layout"
             android:layout_width="match_parent"
