--- a/app/src/main/res/layout/electr_threshold_setting.xml
+++ b/app/src/main/res/layout/electr_threshold_setting.xml
@@ -10,8 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="参数设置"
-        android:layout_margin="10dp"
+        android:padding="10dp"
+        android:background="#f0604d"
         android:textSize="20sp"
+        android:textColor="#fff"
         android:gravity="center"/>
     <LinearLayout
         android:layout_width="match_parent"
@@ -129,5 +131,12 @@
         </LinearLayout>
 
     </LinearLayout>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/commit"
+        android:textColor="#f0604d"
+        android:background="#fff"
+        android:text="确定"/>
 
 </LinearLayout>
