--- a/app/src/main/res/layout/include_search.xml
+++ b/app/src/main/res/layout/include_search.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:animateLayoutChanges="true"
     android:background="#e6e6e6">
 
         <LinearLayout
@@ -53,7 +54,6 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="10dp"
-
             android:text="查询"
             android:textColor="#fff"
             />
