--- a/app/src/main/res/layout/water_threshold_setting.xml
+++ b/app/src/main/res/layout/water_threshold_setting.xml
@@ -10,9 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="水位阈值设置"
-        android:layout_margin="10dp"
+        android:padding="5dp"
         android:textSize="20sp"
-        android:gravity="center"/>
+        android:background="#f0604d"
+        android:gravity="center"
+        android:textColor="#fff"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -28,7 +30,6 @@
         <EditText
             android:id="@+id/high_value"
             android:layout_width="0dp"
-            android:gravity="center"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/edit_view_bg"/>
@@ -52,5 +53,12 @@
             android:layout_weight="1"
             android:background="@drawable/edit_view_bg"/>
     </LinearLayout>
+    <Button
+        android:id="@+id/commit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#f0604d"
+        android:background="#fff"
+        android:text="确定"/>
 
 </LinearLayout>
