--- a/app/src/main/res/layout/water_threshold_setting.xml
+++ b/app/src/main/res/layout/water_threshold_setting.xml
@@ -32,6 +32,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:padding="3dp"
             android:background="@drawable/edit_view_bg"/>
     </LinearLayout>
     <LinearLayout
@@ -51,6 +52,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:padding="3dp"
             android:background="@drawable/edit_view_bg"/>
     </LinearLayout>
     <Button
